cmake_minimum_required(VERSION 3.3)
project(dronebridge)

add_subdirectory(control)
add_subdirectory(status)
add_subdirectory(proxy)
add_subdirectory(telemetry)
add_subdirectory(video)
if (EXISTS "video/legacy")
    add_subdirectory(video/legacy)
endif ()
if (EXISTS "plugins/example_read_rc")
    add_subdirectory(plugins/example_read_rc)
endif ()
if (EXISTS "plugins/rc_to_gpio_mapper")
    find_library(WIRING_PI wiringPi)
    if(WIRING_PI)
        add_subdirectory(plugins/rc_to_gpio_mapper)
    endif()
endif ()
if (EXISTS "/opt/vc/include/bcm_host.h")
    # only build on Raspberry Pi
    add_subdirectory(splash)
    add_subdirectory(osd)
endif ()
add_subdirectory(common)
